--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14"
+    },
+    "scripts": {
+        "fix": "vendor/bin/php-cs-fixer fix src",
+        "serve": "php -S localhost:8080 -t src/public"
     }
 }
