--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,17 @@
     },
     "scripts": {
         "fix": [
-            "vendor/bin/php-cs-fixer fix app",
-            "vendor/bin/php-cs-fixer fix public",
-            "vendor/bin/php-cs-fixer fix resources/views"
+            "php-cs-fixer fix app",
+            "php-cs-fixer fix public",
+            "php-cs-fixer fix resources/views"
         ],
         "serve": "php -S localhost:8080 -t public"
     },
     "autoload": {
         "files": ["app/functions.php"],
         "psr-4": {
-            "App\\Http\\Controller\\",
+            "App\\": "app/"
         }
-    },
+    }
+
 }
